[tool.poetry]
authors = ["Idein Inc."]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
]
description = "actfw's additional components for RaspberryPi"
keywords = ['actcast']
license = "MIT"
name = "actfw-raspberrypi"
readme = "README.md"
repository = "https://github.com/Idein/actfw-raspberrypi"
version = "1.4.0"

[tool.poetry.dependencies]
python = "^3.6"

actfw-core = "2.0.0a0"
# We postpone adding picamera because https://github.com/waveform80/picamera/pull/405 is not in the latest picamera (1.13) yet.

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.3"
pysen = {version = "^0.9.1", extras = ["lint"]}
pytest = "^6.2.3"
sphinx-theme = "^1.0"

[tool.pysen.lint]
enable_black = true
enable_flake8 = false # FIXME: too many warns/errors.
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 128
py_version = "py38"

[[tool.pysen.lint.mypy_targets]]
paths = ["."]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
